# daram-stable

./: .gitignore  Cargo.toml  README.md  RELEASE.md  grammar.md
.github/workflows/: cli-ci.yml  compiler-ci.yml  (+2 more)
cli/: Cargo.toml
cli/src/: dependency_cache.rs  main.rs  manifest.rs  terminal.rs  workspace.rs
cli/src/commands/: add.rs  bench.rs  build.rs  check.rs  doc.rs  exec_mir.rs  fmt.rs  init.rs  install.rs  lint.rs  lsp.rs  mod.rs  new.rs  remove.rs  run_cmd.rs  test.rs
compiler/: Cargo.toml
compiler/runtime/: c_backend_runtime_support.c  native_runtime_core.c  shared_io_helpers.c
compiler/src/: ast.rs  backend_capabilities.rs  builtin_catalog.rs  c_backend.rs  cranelift_backend.rs  diagnostics.rs  hir.rs  interpreter.rs  interpreter_builtins_collections.rs  interpreter_builtins_network.rs  interpreter_builtins_strings.rs  interpreter_builtins_system.rs  lexer.rs  lib.rs  lib_frontend.rs  mir.rs  monomorphize.rs  name_resolution.rs  native_runtime.rs  parser.rs  parser_recovery.rs  session.rs  source.rs  stdlib_bundle.rs  type_checker.rs  type_checker_abilities.rs  type_checker_borrow.rs  type_checker_collect.rs  type_checker_infer.rs  type_checker_infer_calls.rs  type_checker_match.rs  type_checker_methods.rs  type_checker_places.rs  type_checker_prepare.rs
compiler/tests/: c_backend_regression.rs  cranelift_backend_regression.rs  frontend_regression.rs  interpreter_regression.rs  mir_regression.rs  runtime_contract_regression.rs
compiler/tests/fixtures/: runtime_abi_snapshot.txt
docs/: index.html
scripts/: install.ps1  install.sh  release-gate.sh
(+14 files in other folders)
