[package]
name = "daram-compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "The Daram programming language compiler"

[lib]
name = "daram_compiler"
path = "src/lib.rs"

[dependencies]
cranelift-codegen = "0.116"
cranelift-frontend = "0.116"
cranelift-module = "0.116"
cranelift-native = "0.116"
cranelift-object = "0.116"
serde_json = "1"
